<resources>
    <string name="app_name">InstaGameProject</string>

    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login_context">Don\'t have an account yet?</string>

    <string name="feed_page_title">POSTS</string>
    <string name="post_context">Posted at</string>
    <string name="post_time">12:33 AM</string>
    <string name="post_date">05.07.2018</string>
    <string name="like_context">Likes:</string>
    <string name="like_number">1</string>

    <string name="csgo">Counter-Strike: Global Offensive</string>
    <string name="pubg">PlayerUnknown Battlegrounds</string>
    <string name="fortnite">Fortnite Battle Royale</string>
    <string name="lol">League of Legends</string>
    <string name="dota">DOTA</string>
    <string name="overwatch">Overwatch</string>

    <string name="region">REGION</string>
    <string name="interest">INTERESTS</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
