<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/interestRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgpage"
    tools:context=".InterestActivity">

    <TextView
        android:padding="20dp"
        android:text="INTERESTS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:id="@+id/interestChildRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="20dp">

        <Button
            android:id="@+id/csgoGameBtn"
            android:layout_width="77dp"
            android:layout_height="79dp"
            android:layout_marginLeft="60dp"
            android:background="@drawable/csgobtn" />

        <TextView
            android:id="@+id/csgoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/csgo"
            android:textSize="7sp"
            android:textColor="#ffffff"
            android:layout_marginLeft="45dp"
            android:layout_below="@+id/csgoGameBtn" />

        <Button
            android:id="@+id/pubgGameBtn"
            android:layout_width="77dp"
            android:layout_height="79dp"
            android:layout_marginLeft="60dp"
            android:layout_toRightOf="@+id/csgoGameBtn"
            android:background="@drawable/pubgbtn" />

        <TextView
            android:id="@+id/pubgTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pubg"
            android:textColor="#ffffff"
            android:textSize="7sp"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@+id/csgoTextView"
            android:layout_below="@+id/pubgGameBtn" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/interestChildRelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_below="@+id/interestChildRelativeLayout">

        <Button
            android:id="@+id/fortniteGameBtn"
            android:layout_width="77dp"
            android:layout_height="79dp"
            android:background="@drawable/fortnitebtn"
            android:layout_marginLeft="60dp" />

        <TextView
            android:id="@+id/fortniteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fortnite"
            android:textSize="7sp"
            android:textColor="#ffffff"
            android:layout_marginLeft="65dp"
            android:layout_below="@+id/fortniteGameBtn" />

        <Button
            android:id="@+id/lolGameBtn"
            android:layout_width="77dp"
            android:layout_height="79dp"
            android:background="@drawable/lolbtn"
            android:layout_marginLeft="60dp"
            android:layout_toRightOf="@+id/fortniteGameBtn"/>

        <TextView
            android:id="@+id/lolTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lol"
            android:textSize="7sp"
            android:textColor="#ffffff"
            android:layout_below="@+id/lolGameBtn"
            android:layout_toRightOf="@+id/fortniteTextView"
            android:layout_marginLeft="70dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/interestChildRelativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_below="@+id/interestChildRelativeLayout2">

        <Button
            android:id="@+id/dotaGameBtn"
            android:layout_width="77dp"
            android:layout_height="79dp"
            android:background="@drawable/dotabtn"
            android:layout_marginLeft="60dp" />

        <TextView
            android:id="@+id/dotaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dotaGameBtn"
            android:layout_marginLeft="90dp"
            android:text="@string/dota"
            android:textSize="7sp"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/overwatchGameBtn"
            android:layout_width="77dp"
            android:layout_height="79dp"
            android:layout_toRightOf="@+id/dotaGameBtn"
            android:layout_marginLeft="60dp"
            android:background="@drawable/overwatchbtn" />

        <TextView
            android:id="@+id/overwatchTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overwatch"
            android:textSize="7sp"
            android:textColor="#ffffff"
            android:layout_toRightOf="@+id/dotaTextView"
            android:layout_below="@+id/overwatchGameBtn"
            android:layout_marginLeft="110dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/interestChildRelativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/interestChildRelativeLayout3"
        android:padding="20dp">

        <Button
            android:id="@+id/otherBtn"
            android:layout_width="70dp"
            android:layout_height="21dp"
            android:layout_marginLeft="200dp"
            android:background="@drawable/otherbtn" />

        <Button
            android:id="@+id/createAccountBtn"
            android:layout_width="78dp"
            android:layout_height="21dp"
            android:background="@drawable/createaccountbtn"
            android:layout_below="@+id/otherBtn"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>