<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgpage"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    tools:context=".UserProfileActivity">

    <TextView
        android:text="USER PROFILE"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />

    <RelativeLayout
        android:id="@+id/userProfileChildRelativeLayout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/userProfileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/profileimage"
            android:layout_marginLeft="30dp" />

        <TextView
            android:id="@+id/userProfileUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/username"
            android:textSize="10sp"
            android:layout_marginLeft="55dp"
            android:textColor="#ffffff"/>

        <TableRow
            android:layout_width="30dp"
            android:layout_height="1dp"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="2dp"
            android:background="#ffffff">
            
        </TableRow>
        
        <TextView
            android:id="@+id/userProfileRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:textSize="10sp"
            android:layout_marginLeft="65dp"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/userProfileInterest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:text="@string/interest"
            android:textColor="#ffffff"
            android:layout_marginTop="13dp"
            android:textSize="10sp" />

    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/userProfileChildLinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/userProfileChildRelativeLayout">
        
        <android.support.v7.widget.RecyclerView
            android:id="@+id/userProfileRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            
            
        </android.support.v7.widget.RecyclerView>
        
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/userProfileChildRelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_below="@+id/userProfileChildLinearLayout2">
        
        <Button
            android:id="@+id/editProfileBtn"
            android:layout_width="90dp"
            android:layout_height="31dp"
            android:background="@drawable/editprofilebtn"
            android:layout_centerVertical="true"
            android:layout_marginLeft="70dp"/>

        <Button
            android:id="@+id/friendListBtn"
            android:layout_width="90dp"
            android:layout_height="31dp"
            android:background="@drawable/friendlistbtn"
            android:layout_toRightOf="@+id/editProfileBtn"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"/>
        
    </RelativeLayout>

</RelativeLayout>